...

    Column(
        modifier = modifier
            .fillMaxSize()
            .verticalScroll(rememberScrollState())
            .padding(16.dp)
            .testTag("dictionaryResults"),
        verticalArrangement = Arrangement.spacedBy(14.dp),
    ) {
        if (displays.size > 1) {
            SingleChoiceSegmentedButtonRow(
                modifier = Modifier.horizontalScroll(rememberScrollState()),
            ) {
...
